--- a/src/base/main.scss
+++ b/src/base/main.scss
@@ -6,6 +6,7 @@
 @font-face {
   font-family: 'Kudryashev';
   src: url('../../assets/fonts/kudryashev/KudryashevDisplay-Sans-convert+2650-600+675.woff');
+  //src: url('../../assets/fonts/kudryashev/25.woff');
   font-style: normal;
 }
 
