--- a/src/modal/modal.scss
+++ b/src/modal/modal.scss
@@ -12,22 +12,14 @@
   &--level-1 {
     z-index: 1000;
   }
+
   &--level-2 {
     z-index: 2000;
   }
+
   &--level-3 {
     z-index: 3000;
   }
-
-  //position: fixed;
-  //@include absolute-fill;
-  //height: 100vh;
-  //overflow-y: auto;
-  //overflow-x: hidden;
-  //z-index: 1000;
-  //color: var(--black-color);
-  ////opacity: 0;
-  ////visibility: hidden;
 
   $background-transition: 350;
 
@@ -99,6 +91,7 @@
     &--black {
       background: var(--black-color);
     }
+
     &--main {
       background: var(--main-color);
     }
@@ -126,6 +119,22 @@
       opacity: 1;
       visibility: visible;
       pointer-events: all;
+    }
+  }
+
+  &__youtube-wrapper {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+  }
+
+  &__youtube {
+    position: absolute;
+    @include absolute-fill;
+
+    & iframe {
+      position: absolute;
+      @include absolute-fill;
     }
   }
 
