--- a/src/base/mixins.scss
+++ b/src/base/mixins.scss
@@ -122,14 +122,10 @@
   }
 }
 
-@mixin kudryashev {
-  font-family: 'Kudryashev', sans-serif;
+@mixin milago {
+  font-family: 'Milago', sans-serif;
 }
 
 @mixin manrope {
   font-family: 'Manrope', sans-serif;
-}
-
-@mixin euclid {
-  font-family: 'Euclid', sans-serif;
 }
