--- a/src/animation/animation.scss
+++ b/src/animation/animation.scss
@@ -145,6 +145,7 @@
     transform: translate3d(0, 100%, 0);
     transform-origin: top right;
 
+    .modal--show &,
     &--active {
       transform: none;
     }
