--- a/src/modal/modal.scss
+++ b/src/modal/modal.scss
@@ -133,7 +133,7 @@
     pointer-events: none;
 
     #{$show} & {
-      opacity: 1;
+      opacity: 1!important;
       visibility: visible;
       pointer-events: all;
     }
