--- a/src/businesses/businesses.scss
+++ b/src/businesses/businesses.scss
@@ -10,11 +10,16 @@
 
   $ready-title: '.animation__block--ready-title';
 
+  @include tablet-big-screen {
+    padding-top: 47vw;
+    padding-bottom: 51vw;
+  }
+
   &__block {
   }
 
   &__title-wrapper {
-    margin-left: -72.8vw;
+    margin-left: -64.8vw;
     margin-top: -3.888vw;
     margin-bottom: 2vw;
 
@@ -33,6 +38,7 @@
     @include tablet-big-screen {
       line-height: 93%;
       white-space: normal;
+      font-size: 26.5vw;
     }
   }
 
@@ -44,7 +50,7 @@
 
     @include tablet-big-screen {
       flex-direction: column;
-      margin-bottom: 25vw;
+      margin-bottom: 81vw;
     }
   }
 
@@ -56,7 +62,7 @@
 
     @include tablet-big-screen {
       font-size: 6.5vw;
-      margin-top: 7vw;
+      margin-top: 3vw;
     }
 
     &--1 {
@@ -66,11 +72,20 @@
 
     &--2 {
       color: var(--black-color);
+
+      @include tablet-big-screen {
+        margin-top: 17vw;
+        font-size: 9vw;
+      }
     }
   }
 
   &__desc-item-line {
     margin-top: -1.1vw;
+
+    @include tablet-big-screen {
+      margin-top: 0;
+    }
   }
 
   &__icon-block {
@@ -93,10 +108,10 @@
 
     @include tablet-big-screen {
       left: auto;
-      right: 0;
-      top: -10vw;
-      width: 17vw;
-      height: 17vw;
+      right: 2vw;
+      top: -39vw;
+      width: 28vw;
+      height: 28vw;
     }
 
     circle {
@@ -134,8 +149,8 @@
 
       @include tablet-big-screen {
         left: auto;
-        right: 10vw;
-        top: -10vw;
+        right: 23vw;
+        top: -39vw;
       }
     }
   }
@@ -150,6 +165,7 @@
 
     @include tablet-big-screen {
       margin-left: 0;
+      font-size: 6.5vw;
     }
   }
 
@@ -162,7 +178,7 @@
     @include tablet-big-screen {
       flex-direction: column;
       align-items: flex-start;
-      margin-top: 15vw;
+      margin-top: 14vw;
     }
   }
 
