--- a/src/menu/menu.scss
+++ b/src/menu/menu.scss
@@ -14,6 +14,11 @@
     position: relative;
     padding: 7.5vw 0;
     z-index: 2;
+
+    @include tablet-big-screen {
+      padding-top: 38vw;
+      padding-bottom: 10vw;
+    }
   }
 
   &__main {
@@ -21,13 +26,18 @@
 
   &__main-item {
     font-size: 9.6925vw;
-    line-height: 9.6925vw;
+    line-height: 87%;
     letter-spacing: -0.05em;
     color: var(--white-color);
     cursor: pointer;
-    margin-top: -4vw;
+    margin-top: -2vw;
     display: flex;
     align-items: baseline;
+
+    @include tablet-big-screen {
+      font-size: 19vw;
+      margin-bottom: 3vw;
+    }
 
     & .char-hover__item-inner-hover,
     & .char-hover__item-inner {
@@ -40,17 +50,33 @@
       font-size: 3.6925vw;
       margin-left: 1vw;
       font-weight: 200;
+
+      @include tablet-big-screen {
+        font-size: 9vw;
+        margin-left: 3vw;
+      }
     }
 
     &--1 {
       padding-left: 9vw;
+
+      @include tablet-big-screen {
+        padding-left: 0;
+      }
     }
 
     &--2 {
       padding-left: 24vw;
+
+      @include tablet-big-screen {
+        padding-left: 32vw;
+      }
     }
 
     &--3 {
+      @include tablet-big-screen {
+        padding-left: 16vw;
+      }
     }
   }
 
@@ -58,18 +84,32 @@
     @include flex-row;
     align-items: flex-end;
     justify-content: space-between;
-    padding-top: 5vw;
+    padding-top: 1vw;
+
+    @include tablet-big-screen {
+      @include flex-column;
+    }
   }
 
   &__bottom-links {
+    @include tablet-big-screen {
+      padding-left: 33vw;
+    }
   }
 
   &__bottom-links-item {
     @include manrope;
-    font-size: 3.6477vw;
+    font-size: 3.3vw;
     line-height: 116%;
     letter-spacing: -0.05em;
     cursor: pointer;
+
+
+    @include tablet-big-screen {
+      font-size: 10vw;
+      margin-bottom: 4vw;
+      font-weight: 300;
+    }
   }
 
   &__bottom-contacts {
@@ -82,6 +122,10 @@
     line-height: 100%;
     letter-spacing: -0.033em;
     cursor: pointer;
+
+    @include tablet-big-screen {
+      display: none;
+    }
   }
 
   &__bottom-contacts-form-button {
@@ -96,6 +140,11 @@
     margin-top: 1vw;
     margin-bottom: 2.5vw;
 
+    @include tablet-big-screen {
+      font-size: 14.5vw;
+      margin-top: 20vw;
+    }
+
     &:after {
       @include pseudo-absolute();
       width: 100%;
@@ -103,6 +152,10 @@
       background: var(--main-color);
       left: 0;
       top: calc(100% + 1vw);
+
+      @include tablet-big-screen {
+        height: 1.65vw;
+      }
     }
   }
 
